--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Django==1.4.1
 MySQL-python==1.2.4b5
 PIL==1.1.7
--e https://github.com/gkuhn1/django-admin-templates-twitter-bootstrap.git#egg=admin-bootstrap
+-e git+https://github.com/gkuhn1/django-admin-templates-twitter-bootstrap.git#egg=admin-bootstrap
 -e git+https://github.com/dandamian/django-discussion.git#egg=django-discussion
 django-orderable==1.1.2
 django-threadedcomments==0.5.3
